<resources>
    <string name="app_name">#CUOREDINAPOLI</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_contatti">Contatti</string>
    <string name="cuore_loader">loaderCuore</string>
    <string name="infoText">
                \"Rivoluzionaria\" è un\'intuizione, una consapevolezza che è capace di sovvertire direzioni, modi di pensare, azioni e relazioni. Un piccolo gesto può diventare un esempio seguito da molti e stravolgere positivamente
        l\'intera dinamica di un territorio: la rivoluzione inizia da qui, da te, con gesti quotidiani di amore per il territorio comune.\n\n
\"Rivoluzionaria\" è la consapevolezza di essere donne e uomini che attraversano relazioni, città, strade, storie e che sanno di essere parte di un flusso, i cui elementi si influenzano reciprocamente.\n\n
\"Rivoluzionaria\" è la consapevolezza che ogni cosa esiste in relazione l\'una con l\'altra e in relazione a te che puoi influenzare e cambiare queste dinamiche.\n\n
Ed è \"Una rivoluzionaria presa di coscienza\" il punto di partenza e di arrivo di #CUOREDINAPOLI.\n\n
    </string>
    <string name="logo_cuoredinapoli">Logo Cuoredinapoli</string>
    <string name="contattiText">Puoi contattarci all\'indirizzo email \n info.cuoredinapoli@gmail.com</string>
    <string name="fb">Facebook</string>
    <string name="ig">Instagram</string>
    <string name="title_ar">AR</string>
    <string name="infoAr">Con la Realtà Aumentata puoi ottenere nuove informazioni su ciò che ti circonda e scoprire aspetti nascosti della realtà.
    Inquadra il segno #CUOREDINAPOLI o le varie zone dei Quartieri Spagnoli sulla mappa.</string>
    <string name="buttonAR">Lancia la Realtà Aumentata</string>
    <string name="mi_programma">Programma</string>
    <string name="title_concept">Il Concept</string>
    <string name="title_Ar">Realtà Aumentata</string>
    <string name="title_Programma">Il Programma del 4 Maggio</string>
    <string name="infoProgramma">Lorem</string>
    <string name="infoAr2">Per poter utilizzare la funzionalità della Realtà Aumentata, il tuo dispositivo deve
    essere compatibile\ncon Google ARCore.</string>
    <string name="mi_partecipanti">Partecipanti</string>
    <string name="mi_credits">Credits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Partecipanti">Chi Partecipa</string>
    <string name="infoPartecipanti">Lorem</string>
    <string name="title_Credits">Credits</string>
    <string name="infoCredits">#CUOREDINAPOLI è un progetto del corso di Nuove Tecnologie dell\'Arte dell\'Accademia di Belle Arti di Napoli.\n\n
        È svolto in collaborazione con l\'Assessorato alla Cultura e al Turismo del Comune di Napoli, la Municipalità 2 del Comune di Napoli e numerose associazioni e privati che agiscono costantemente sul territorio.</string>
    <string name="dueporte">ZONA DUE PORTE A TOLEDO</string>
    <string name="vico_lungo_teatro_nuovo">Vico Lungo Teatro Nuovo</string>
    <string name="vico_lungo_teatro_nuovo_programma">CAMMAROTA\n70 spritz e patatine in omaggio\n\nPISADOG\nLimoncello in omaggio\n\nTRATTORIA DA NENNELLA\nPasta e patate in omaggio (ore 16)\n\nCOCCOLE\nOfferte sulla merce</string>
    <string name="via_speranzella">Via Speranzella</string>
    <string name="viaSperanzellaProgramma">MACELLERIA CARNI SCELTE\nBuffet per i clienti (ore 17)\n\nPASTICCERIA FIORE\nDegustazione \'Via col vento\' (ore 17:30/18:00)\n\nFARMACIA ROMANO\nProdotti Rughe: crema corpo a 3,99€; shampoo anticaduta 9,90€; crema viso 3,99€; maschera argilla 5,99€; scrub viso 5,99€; compresse anticaduta 19,90€; / Linea Vichy sconto del 50%</string>
    <string name="vicoLungoGelso">Vico Lungo Gelso</string>
    <string name="vicoLungoGelsoProgramma">
        \'A PIGNATA\nMenù #CUOREDINAPOLI\n\nTUTTO MILLE e CONSIGLIO\nDegustazione di una torta\n\nTINA E ANGELO\nDegustazione di tre primi (pasta e patate, penne all\'arrabbiata, pasta con fagioli e cozze) (ore 20)\n\nBARBIERE\nBuffet (ore 17)\n\nOROLOGERIA\nSconto del 20% su argenteria e orologeria (tutta la giornata)\n\nFRATELLI COZZOLINO\nporzione di patatine e vino ad €1</string>
    <string name="TitoloSperanzella">ZONA SPERANZELLA</string>
    <string name="titoloConcordia">ZONA CONCORDIA</string>
    <string name="tavolata">Dalle ore 17 -  tavolata con:</string>
    <string name="tavolataProgramma">FORNO MONTECALVARIO\nPane #CUOREDINAPOLI\n\nLABORATORIO ENZO ZAZZARO\nDegustazioni di parigine e pizzette\n\nDON CAFÈ\nSfogliatella in omaggio con l’acquisto di un caffè\n\nLAVANDERIA IL BENESSERE DEI TUOI CAPI\nDegustazione\n\nPIZZERIA COR\'E NAPULE\nAssaggio di pasta</string>
    <string name="piazzaMontecalvario">Piazza Montecalvario</string>
    <string name="piazzaMontecalvarioProgramma">BAR #CUOREDINAPOLI\n50 spritz in omaggio</string>
    <string name="vicoLungoMontecalvario">Vico Lungo Montecalvario</string>
    <string name="vicoLungoMontecalvarioProgramma">PANETTIERE\nPane #CUOREDINAPOLI</string>
    <string name="concordia">Via Concordia</string>
    <string name="concordiaProgramma">LA DOLCE SOSTA\nAperitivo #CUOREDINAPOLI\n\nPANETTIERE FRANCESCO\nPane #CUOREDINAPOLI</string>
    <string name="titoloMontecalvario">ZONA MONTECALVARIO</string>
    <string name="foqus">Foqus</string>
    <string name="viaDeDeo">Via De Deo</string>
    <string name="titoloDeDeo">ZONA DE DEO</string>
    <string name="vicoDafflitto">Vico D\'Afflitto</string>
    <string name="vicoTrinitaSpagnoli">Vico Trinità degli Spagnoli</string>
    <string name="vicoTofa">Vico Tofa</string>
    <string name="vicoTreRe">Vico Tre Re a Toledo</string>
    <string name="vicoLungoGelso2">Vico Lungo del Gelso</string>
    <string name="viaSperanzella2">Via Speranzella</string>
    <string name="viaConcezione">Via Concezione a Montecalvario</string>
    <string name="viaSSepolcro">Vico San Sepolcro</string>
    <string name="viaPortacarrese">Via Portacarrese a Montecalvario</string>
    <string name="viaFigurella">Via Figurella a Montecalvario</string>
    <string name="vicoTeatroNuovo">Vico Teatro Nuovo</string>
    <string name="vicoDuePorte">Vico Due Porte a Toledo</string>
    <string name="viaMontecalvario">Via Montecalvario</string>
    <string name="viaSMariaDelleGrazie">Via Santa Maria delle Grazie Toledo</string>
    <string name="viaSMariaDelleGrazieProgramma">SARTULELLE\nDegustazione babà rustico (ore 17.30)\n\nTRATTORIA \'DA CONCETTA\'\nDegustazione di fritture e stuzzichini\n\nTRATTORIA QUARTIERI SPAGNOLI\nDegustazione di zeppoline rosse (ore 17)\n\nVOLO FIORI\nFiori in regalo (ore 17)
</string>
    <string name="viaMontecalvarioProgramma">BAR DONATO\nDegustazione di bibite (roba da bere) (ore 19)\n\nVIVERE A COLORI\nAperitivo (ore 18.30)</string>
    <string name="vicoDuePorteProgramma">STÀ BEN\nDegustazione 80 bicchieri di Sangria (ore 18)\n\nSASI PARRUCCHIERE\nAperitivo con musica\n\nSORELLE TALARICO\nAperitivo con musica\n\nTABACCHI\nAperitivo (ore 18.30)</string>
    <string name="vicoTeatroNuovoProgramma">TRATTORIA TOLEDO\nMeloncello/Limoncello in offerta (ore 17)</string>
    <string name="viaFigurellaProgramma">ZIO ENZO\nDegustazione di vino (ore 17.30)</string>
    <string name="viaPortacarreseProgramma">DI GIÒ\nBrindisi (ore 17)\n\nBARBER OLD SCHOOL\nBrindisi (ore 18)\n\nESTETISTA NILÙ\nBiscotti/cose da mangiare  (dalle ore 18.30)\n\nBAR GIOVANNONE\nCaffé a €0,50 (dalle ore 12)\n\nBARBIERE\nShampoo e taglio €10</string>
    <string name="viaSSepolcroProgramma">TRATTORIA \'A FIGLIA D\'À MARUZZARA\nOffre limoncello (tutto il giorno)\n\nPARRUCCHIERE \nDegustazione di dolci (ore 18)</string>
    <string name="viaConcezioneProgramma">PLANET WIN 365\nOfferta sul caffè\n\nPIZZERIA RAPUANO\nPizza #CUOREDINAPOLI</string>
    <string name="viaSperanzella2programma">CASA DANIELE\nTavolino con biscotti (ore 17.30)\n\nGDL\nStand rosso #CUOREDINAPOLI\n\nINTIMO BARBY\nStand rosso #CUOREDINAPOLI\n\nEDICOLA ROMA\nTavolo con dolcetti (ore 18)\n\nMACELLERIA PIPOLO\nOffre polpette fritte (dalle ore 18)\n\nELETTRICITÀ\nBrindisi con prosecco (ore 18.30)\n\nTRATTORIA SPERANZELLA\nPrimo #CUOREDINAPOLI\n\nDOLCE PALATO\nRustici assortiti (dalle ore 17)\n\nDA MIMÌ\nAssaggi di pizza #CUOREDINAPOLI (dalle ore 19)\n\nDIAMOND CHIC\nVetrina rosso #CUOREDINAPOLI\n\nO VESUVIO\nNAPOLI (Bruschette, mozzarella di bufala, fritto Italia e primo a scelta tra mare e terra € 15 a persona) \n\nGINGER TETI\nPanino #CUOREDINAPOLI\n\nIDENTITY PARRUCCHIERE\nOffre spritz #CUOREDINAPOLI (ore 19.30)\n\nGRAZIA ARTICOLI PER LA CASA\nSconto a sorpresa #CUOREDINAPOLI\n\nSABATINO\nOmaggio bottiglietta d\'acqua\n\nTRATTORIA ANTICA CAPRI\nMenù #CUOREDINAPOLI €25 a persona\n\nNINNONE TRATTORIA\nMenù #CUOREDINAPOLI (dall\'antipasto al dolce) di terra €20 a persona o di mare €25 a persona. Tutto fresco!\n\nCARNI ELITE\nFrancesine farcite #CUOREDINAPOLI\n\nADDO \'O 52\nPizza e bibita €5 \n\nFRUTTIVENDOLO\nSpremute d\'arancia fresche (ore 18.30)\n\nTELEPHONE\'S PLANET\nSconto variabile su tutta la merce\n\nSUNDAY ESTETISTA\nSmalto rosso #CUOREDINAPOLI a €2</string>
    <string name="vicoLungoGelso2programma">LOCANDA DEI BORBONI\nGnocchi #CUOREDINAPOLI (dalle ore 18.30)\n\nPARRUCCHIERE MAIORANO\nBrindisi (dalle ore 19)\n\nTRATTORIA DA PEPPINO\nAperitivo #CUOREDINAPOLI (dalle ore 20)\n\nPARLUX\nTrattamento curativo in omaggio\n\nTRATTORIA ANNARÈ\nSul totale il 30% di sconto\n\nVALÙ con HOSTERIA TOLEDO\nOffre assaggio di risotto #CUOREDINAPOLI (dalle ore 18)\n\nMARE BLU\nAperitivo con coppette alle olive a €1 (ore 18.30)\n\nO\' VASCIO\nOffre assaggio di pasta e patate e dj set (dalle ore 17.30 alle ore 19.30)\n\nALI PAK FOOD\nOffre aperitivo #CUOREDINAPOLI (dalle ore 18)\n\nKBIRR\nDegustazione birra</string>
    <string name="vicoTreReprogramma">PIZZAIOLI VERACI\n10% di sconto a chi si presenta con la mappa #CUOREDINAPOLI\n\nPIZZERIA 7 SOLDI\nPasta con ragù napoletano e polpettine (ore 17.30)</string>
    <string name="vicoTofaProgramma">ELA GLAMOUR e PROSHOP\nLecca lecca #CUOREDINAPOLI (ore 17)\n\nMERCERIA AGO E FILO E MOLTO DI PIÙ\nSconto sui capi selezionati</string>
    <string name="vicoTrinitaSpagnoliProgramma">VICO TRINITÀ DEGLI SPAGNOLIIL GRILLO ENOTECA\nBrindisi (ore 19.30)\n\nL\'ANGOLO D\'ORO\nBrindisi (ore 19.30)</string>
    <string name="vicoDafflittoProgramma">ANNIE CALZATURE, YOUR PARTY e OTTICA DE VINCENZO\nOffre aperitivo (ore 18.30)\n\nOTTICA DE VINCENZO\nSconto del 25% per tutti i clienti #CUOREDINAPOLI \n\nYOUR PARTY\nColonna di palloncini #CUOREDINAPOLI\n\nMONDO SERVIZI e DOLCI MOMENTI\nOffre aperitivo con musica (ore 18)\n\nPANIFICIO RESCIGNO, TABACCHI e LA BOUTIQUE DEL PARRUCCHIERE\nOffre aperitivo (ore 18)\n\nZIO RICH\nOffre bicchierini con granita di limone (dalle ore 18 alle ore 19)</string>
</resources>