<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">


    <ImageView
        android:id="@+id/splash_cuore"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/logo_cuoredinapoli"
        android:src="@mipmap/ic_cuore_loader_foreground" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_cuore"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="@dimen/standardPadding"
        android:text="@string/contattiText"
        android:textAlignment="center"
        android:textColor="@android:color/white" />


    <ImageButton
        android:id="@+id/fb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fb"
        android:onClick="openFb"

        android:scaleType="fitStart"
        android:src="@mipmap/ic_facebook_foreground" />

    <ImageButton
        android:id="@+id/ig"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/borderDistance"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ig"
        android:onClick="openIg"
        android:scaleType="fitStart"
        android:src="@mipmap/ic_instagram_foreground" />


</RelativeLayout>
</ScrollView>